--- a/stylesheet.css
+++ b/stylesheet.css
@@ -307,6 +307,11 @@ color: #019f6b;
     .inn {
         width: 300px;
     }
+    .swiper{
+        transform: translateX(10px);
+        width:335px;
+       
+    }
     
     .slider-wrapper {
         width: 305px; 
